Part 2/Exercise 2.02/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
